tests/negative/gold/illegal-character-test.gold
tests/negative/illegal-character-test.toit:6:1: error: Invalid name for declaration

^
tests/negative/illegal-character-test.toit:6:1: error: Missing body

^
Couldn't find 'main' (with 0 or 1 argument) in entry file 'tests/negative/illegal-character-test.toit'
Compilation failed
